app-of-apps/gamma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamma
  labels:
    name: gamma
    project: gamma
    managed-by: backstage-template
    created-by: backstage
  annotations:
    backstage.io/project-name: "gamma"
spec: {}
